# devday_2025_chennai

./: README.md  pyproject.toml
1_augmented_llm/: README.md  app.py  models.py  nodes.py  tools.py
1_augmented_llm/data/: us_new_tariffs.txt
2_prompt_chaining/: README.md  app.py  models.py  nodes.py
3_parallelization/: README.md  app.py  models.py  nodes.py
4_routing/: README.md  app.py  models.py  nodes.py
5_orchestrator_worker/: README.md  app.py  models.py  nodes.py
6_evaluator_optimiser/: README.md  app.py  models.py  nodes.py
7_multiagentic_system/: README.md  agents.py  app.py  tools.py
diagrams/: workflow.excalidraw
