[tool.poetry]
name = "devday-2025-bangalore"
version = "0.1.0"
description = "This is a venv for devday bangalore"
authors = ["Suman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.24"
langgraph = "^0.3.33"
langchain-openai = "^0.3.14"
langchain-community = "^0.3.22"
ipython = "^9.1.0"
langgraph-supervisor = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
